--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^12.11.7",
-    "bls12377js": "celo-org/bls12377js#566137fd6b9568ef105a3aeaf8e36ff03da91d49",
+    "bls12377js": "celo-org/bls12377js#566137fd6b9568ef105a3aeaf8e36ff03da91d49"
+  },
+  "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
     "ts-node": "^8.4.1",
-    "typescript": "^3.6.4"
-  },
-  "devDependencies": {
+    "typescript": "^3.6.4",
+    "@types/node": "^12.11.7",
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.7"
   }
